--- a/am-ia-league/src/app/components/routes-timeline/routes-timeline.component.scss
+++ b/am-ia-league/src/app/components/routes-timeline/routes-timeline.component.scss
@@ -607,7 +607,7 @@
       text-align: left;
 
       .timeline-marker {
-        left: -3.5rem;
+        left: -4.2rem;
         right: auto;
       }
     }
